MVP completed plus stretch of fixed opacity nav

--- a/css/index.css
+++ b/css/index.css
@@ -164,12 +164,18 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  .container {
+    width: 100%;
+  }
+}
 .main-navigation {
   width: 100%;
   background: #F6F6F6;
   border: #F1F1F1;
   color: #454A59;
   position: fixed;
+  opacity: 0.5;
 }
 .main-navigation div {
   width: 100%;
@@ -210,6 +216,12 @@ footer {
   width: 100%;
   height: 300px;
 }
+@media (max-width: 500px) {
+  .home .intro .main-header {
+    height: 200px;
+    border-radius: 20px;
+  }
+}
 .home .intro h2 {
   padding: 15px;
 }
@@ -221,11 +233,24 @@ footer {
   flex-wrap: wrap;
   width: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images .sky {
+    display: none;
+  }
+  .home .space-images .launch {
+    display: none;
+  }
+}
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 100%;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -243,8 +268,21 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    margin-top: 5%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -269,9 +307,36 @@ footer {
   color: black;
   background: white;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 98%;
+    height: 10%;
+    background: black;
+    color: white;
+    font-size: 2rem;
+    border-radius: 10px;
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    padding: 10% 20%;
+  }
+  .home .walk .walk-text .btn:hover {
+    color: black;
+    background: white;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    order: -1;
+    margin-left: 0;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
