--- a/less/global.less
+++ b/less/global.less
@@ -33,6 +33,9 @@ p {
 .container {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;  
+  margin: 0 auto;
+  @media @phone {
+    width: 100%;
+  }  
 }
 
