--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,6 +5,7 @@
     border: @nav-border;
     color: @nav-font;
     position: fixed;
+    opacity: 0.5;
     div {
         width: 100%;
         margin: 2% 0 2% 0;
